--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "configure-react",
-  "version": "1.0.0",
+  "version": "1.0.3",
   "description": "Easily configure React App with Any Framework or Library like Bootstrap, Material UI, Tailwind CSS, etc. And also configure with any state management library like Redux, MobX, etc. and also configure with any routing library like React Router, Reach Router, etc. and also configure with any testing library like Jest, Enzyme, etc. and also configure with any form library like Formik, React Hook Form, etc. and also configure with any styling library like Styled Components, Emotion, etc. and also configure with any GraphQL library like Apollo Client, Relay, etc. and also configure with any i18n library like i18next, react-intl, etc. ",
   "main": "index.js",
   "scripts": {
@@ -22,15 +22,17 @@
   },
   "files": [
     "commands/*",
-    "index.js"
+    "index.js",
+    "utils/*"
   ],
   "bin": {
-    "createtailwind": "index.js"
+    "configure-react": "index.js"
   },
   "license": "MIT",
   "dependencies": {
     "@tos_/cli-welcome": "^1.0.2",
     "commander": "^9.0.0",
+    "prettier": "^2.7.1",
     "shelljs": "^0.8.5"
   }
 }
